--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 return value.floor()
             }
             if(decimalPoint === 'round'){
-                // return value.round(bigDecimal.RoundingModes.HALF_EVEN)
-                return value.floor()
+                return value.round(0)
+                // return value.floor()
             }
             return value
         }
